修复移动端白屏问题,暂时性取消变量高亮

--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -69,7 +69,17 @@
       // text-indent: 5px;
     }
 
-    @import './js_highlight.scss';
+    .expression {
+      color: rgb(127, 54, 150);
+    }
+
+    .char {
+      color: rgb(147, 67, 65);
+    }
+
+    .value {
+      color: rgb(55, 65, 250);
+    }
 
     .note {
       color: getPageValue('utils', 'noteColor');
