--- a/src/assets/scss/page/summary.scss
+++ b/src/assets/scss/page/summary.scss
@@ -52,7 +52,17 @@
       letter-spacing: 0px;
     }
 
-    @import './js_highlight.scss';
+    .expression {
+      color: rgb(127, 54, 150);
+    }
+
+    .char {
+      color: rgb(147, 67, 65);
+    }
+
+    .value {
+      color: rgb(55, 65, 250);
+    }
 
     .note {
       white-space: nowrap;
