--- a/src/assets/scss/variable/page.scss
+++ b/src/assets/scss/variable/page.scss
@@ -2,7 +2,7 @@ $page: (
   utils: (
     titleColor: #000000,
     fontEmphasize: rgb(255, 0, 0),
-    noteColor: #ac5715,
+    noteColor: rgb(117, 154, 91),
     hrefColor: #3eaf7c,
   ),
   code: (
