--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -7,6 +7,7 @@
 @import './structure/toolbar.scss';
 @import './structure/header.scss';
 @import './structure/body.scss';
+@import './structure/error404.scss';
 
 a {
   text-decoration: none;
