修改一下代码中的缩进的计算

--- a/src/components/utils/table/table-body.scss
+++ b/src/components/utils/table/table-body.scss
@@ -10,6 +10,7 @@
   -webkit-user-select: none; /*webkit浏览器*/ /*选中文字时避免出现蓝色背景*/
   -ms-user-select: none; /*IE10*/ /*选中文字时避免出现蓝色背景*/
   user-select: none; /*选中文字时避免出现蓝色背景*/
+  word-break: break-all;
 }
 .table_body-table{
   width: 100%;
