table的头的背景色添加区分

--- a/src/components/utils/table/table-header.scss
+++ b/src/components/utils/table/table-header.scss
@@ -2,6 +2,8 @@ tr {
   vertical-align: inherit;
 }
 .theadTd {
+  background-color: #cfd5d5;
+  color: #ffffff;
   position: relative;
   word-break: break-all;
   @include paddingSet(12px 5px);
