--- a/src/assets/scss/page/special_char.scss
+++ b/src/assets/scss/page/special_char.scss
@@ -30,5 +30,8 @@
     font-weight: 400;
     padding: 0 5px;
     border-radius: 5px;
+    margin: 0 3px;
+    font-size: 12px;
+    vertical-align: top;
     border: 1px solid rgb(232, 233, 237);
 }
