--- a/src/components/utils/image/image.scss
+++ b/src/components/utils/image/image.scss
@@ -4,8 +4,7 @@
     overflow: hidden;
     margin: 10px auto;
     padding: auto;
-    width: 300px;
-    height: 200px;
+    width: 60%;
 
     .image-error {
         display: flex;
@@ -104,8 +103,8 @@
     }
 
     .image-data {
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
         vertical-align: top;
     }
 }
