--- a/src/components/utils/image/image.scss
+++ b/src/components/utils/image/image.scss
@@ -50,6 +50,7 @@
             align-items: center;
             cursor: pointer;
             font-weight: 800;
+            padding: 0px;
         }
 
         .image-preview-close {
