--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -31,3 +31,7 @@ h6 {
     'Source Han Sans TC', 'Noto Sans CJK TC', 'WenQuanYi Micro Hei', SimSun, sans-serif;
   font-weight: 700;
 }
+
+ul{
+  list-style-type: none;
+}
