--- a/src/assets/scss/page/summary.scss
+++ b/src/assets/scss/page/summary.scss
@@ -27,6 +27,7 @@
   h6 {
     margin: 0 auto;
   }
+
   .inlineCode_char {
     padding: 0 5px;
   }
@@ -45,6 +46,14 @@
     width: 100%;
     font-weight: 400;
     font-size: 13px;
+
+    pre {
+      margin: 0 0 0.5em 0;
+      p {
+        padding: 5px 0;
+      }
+    }
+
     .code_font {
       white-space: nowrap;
       word-break: break-all;
